Added links to publications and reference for thesis

--- a/PhD_project.Rmd
+++ b/PhD_project.Rmd
@@ -92,5 +92,6 @@ Myers, J., Kei, J., Aithal, S., Aithal, V., Driscoll, C., et al. (2019b). Longit
 
 Myers, J., Kei, J., Aithal, S., Aithal, V., Driscoll, C., et al. (2019c). Diagnosing conductive dysfunction in infants using wideband acoustic immittance: Validation and development of predictive models. Manuscript submitted to Journal of Speech Language and Hearing Research.
 
+Myers, J. [(2019d)](https://drive.google.com/file/d/1giXgBKy5Kp5N4VhMN2hSjBN60ffvTifk/view?usp=sharing). Diagnosing conductive dysfunction in infants using wideband acoustic Immittance: Development and validation of predictive models (Unpublished doctoral dissertation). University of Queensland, Brisbane, Australia.
 
 <br>
